core: URL instead of URI in DnsNameResolver